# Shiki4py

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
shiki4py/: __init__.py  api.py  base.py  client.py  configmanager.py  log.py  logmanager.py  tokensmanager.py  utils.py
shiki4py/resources/: __init__.py  animes.py  base_resource.py  comments.py  users.py
shiki4py/store/: __init__.py  env.py  ini.py  memory.py
shiki4py/types/: __init__.py  anime.py  anime_profile.py  ban.py  club.py  club_image.py  comment.py  external_link.py  favourite.py  favourites.py  franchise.py  linked_topic.py  manga.py  message.py  person_role.py  relation.py  screenshot.py  topic.py  unread_messages.py  user.py  user_history.py  user_image.py  user_info.py  user_profile.py  user_rate_full.py  video.py
