[tool.poetry]
name = "Shiki4py"
version = "2.0.0"
description = "Asynchronous client for api Shikimori written in Python 3.7 with asyncio and aiohttp."
authors = ["ren3104 <2ren3104@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ren3104/Shiki4py"
repository = "https://github.com/ren3104/Shiki4py"
packages = [
    { include = "shiki4py", from = "." }
]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.8.1"
pyrate-limiter = "^2.8.1"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
black = "^22.6.0"
isort = "^5.10.1"

[tool.isort]
profile = 'black'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
