[metadata]
name = shiki4py
author = Pu5fon1
version = 0.1.2
description = Api client for Shikimori
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pu5fon1/Shiki4py
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
license = MIT License
license_file = LICENSE

[options]
python_requires = >= 3.6.2
packages = find:
install_requires =
    requests>=2.20
    requests-ratelimiter>=0.3.1
include_package_data = True
